syntax = "proto2";

package org.laborunion.project.hollyshit;

message MessageWrapper {
    oneof msg {
        GetEventsMsg getEventsMsg = 1;
        GetStateMsg getStateMsg = 2;
        EventMsg eventMsg = 3;
    }
}

message GetEventsMsg {
    required int64 time = 1;
    required int64 fromTime = 2;
}

message GetStateMsg {
    required int64 time = 1;
}

message PlayRoomState {
    repeated PlayerStatus players = 1;
}

message PlayerStatus {
    required int32 id = 1;
    required string name = 2;
    required bool isAlive = 3;
    required PlayerCoords coords = 4;
}

message PlayerCoords {
    required double x = 1;
    required double y = 2;
    required double a = 3;
}

message Events {
    repeated EventMsg events = 1;
}

message EventMsg {
    optional int32 objectId = 1;
    optional int32 objectType = 2;
    required int64 time = 3;
    oneof event {
        Respawn respawn = 4;
        Move move = 5;
        Die die = 6;

        Connected connected = 7;
        Disconnected disconnected = 8;
    }
}

message Respawn {
}

message Move {
}

message Die {
}

message Connected {
}

message Disconnected {
}